# beadui

./: Cargo.toml
.beads/: issues.jsonl
src/: main.rs
